--- a/src/app/modules/admin/containers/centers/centers.component.html
+++ b/src/app/modules/admin/containers/centers/centers.component.html
@@ -1,44 +1,44 @@
-<section class="container-axes">
-    <div class="axes">
-        <h1 class="axes__title">Centros</h1>
-        <div class="axes__container-search">
-            <a class="btn-add-axes" (click)="create()" style="cursor: pointer;">
-                <img class="btn-add-axes__ico" src="../../../../../assets/icons/List ol.svg"
+<section class="container-center">
+    <div class="center">
+        <h1 class="center__title">Centros</h1>
+        <div class="center__container-search">
+            <a class="btn-add-center" (click)="create()" style="cursor: pointer;">
+                <img class="btn-add-center__ico" src="../../../../../assets/icons/List ol.svg"
                     alt="Icono de lista ordenada" />
-                <span class="btn-add-axes__text"> AGREGAR CENTROS </span>
+                <span class="btn-add-center__text"> AGREGAR CENTROS </span>
             </a>
-            <label for="searchAxes" class="lbl-search-axes">
-                <input class="lbl-search-axes__input" id="searchAxes" type="text" [(ngModel)]="Centro"
+            <label for="searchAxes" class="lbl-search-center">
+                <input class="lbl-search-center__input" id="searchAxes" type="text" [(ngModel)]="Centro"
                     (ngModelChange)="busca($event)" autocomplete="off" spellcheck="false" />
-                <img class="lbl-search-axes__ico" src="../../../../../assets/icons/Search.svg"
+                <img class="lbl-search-center__ico" src="../../../../../assets/icons/Search.svg"
                     alt="Icono de lupa para busqueda" />
             </label>
         </div>
-        <section class="list-axes">
-            <div class="list-axes__table">
+        <section class="list-center">
+            <div class="list-center__table">
                 <!-- Position Column -->
-                <div class="list-axes__row">
-                    <div class="list-axes__header">Nombre</div>
-                    <div class="list-axes__header">Zona</div>
-                    <div class="list-axes__header list-axes__header--action">
+                <div class="list-center__row">
+                    <div class="list-center__header">Nombre</div>
+                    <div class="list-center__header">Zona</div>
+                    <div class="list-center__header list-center__header--action">
                         Acciones
                     </div>
                 </div>
 
-                <div class="list-axes__row" *ngFor="let element of dataSource">
-                    <div class="list-axes__cell list-axes__cell--axe">
+                <div class="list-center__row" *ngFor="let element of dataSource">
+                    <div class="list-center__cell list-center__cell--axe">
                         {{ element.nombre }}
                     </div>
-                    <div class="list-axes__cell list-axes__cell--axe">
+                    <div class="list-center__cell list-center__cell--axe">
                         {{ element.zona }}
                     </div>
-                    <div class="list-axes__cell list-axes__cell--acction">
+                    <div class="list-center__cell list-center__cell--acction">
                         <a (click)="edit(element)">
-                            <img class="list-axes__ico-action list-axes__ico-action--edit"
+                            <img class="list-center__ico-action list-center__ico-action--edit"
                                 src="../../../../../assets/icons/Pencil.svg" alt="Icono de editar"
                                 matTooltip="Editar" />
                         </a>
-                        <img class="list-axes__ico-action" src="../../../../../assets/icons/Trash.svg"
+                        <img class="list-center__ico-action" src="../../../../../assets/icons/Trash.svg"
                             alt="icono de Eliminar" matTooltip="Borrar" (click)="delete(element)" />
                     </div>
                 </div>
@@ -50,7 +50,7 @@
         <div class="modal__container">
             <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
             <p class="modal__text">
-                ¡El Eje {{ data.nombreCentro }} fue creado con éxito!
+                ¡El centro {{ data.nombreCentro }} fue creado con éxito!
             </p>
         </div>
     </div>
@@ -59,7 +59,7 @@
         <div class="modal__container">
             <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
             <p class="modal__text">
-                ¡El Eje {{ data.nombreCentro }} fue editado con éxito!
+                ¡El centro {{ data.nombreCentro }} fue editado con éxito!
             </p>
         </div>
     </div>
@@ -67,7 +67,7 @@
         <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
         <div class="modal__container-delete">
             <p class="modal__text">
-                <span class="modal__text-span">¿</span>Eliminar eje<span class="modal__text-span">?</span>
+                <span class="modal__text-span">¿</span>Eliminar centro<span class="modal__text-span">?</span>
             </p>
             <div class="modal__options">
                 <svg class="modal__ico-option"  alt="icon check" viewBox="0 0 94 120"
