--- a/src/app/modules/admin/containers/centers/centers.component.scss
+++ b/src/app/modules/admin/containers/centers/centers.component.scss
@@ -164,84 +164,106 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    margin: auto;
     .modal__btnClose {
-        padding: 21px 12px 18px 25px;
-        width: 61px;
-        height: 70px;
-        align-self: flex-end;
-        cursor: pointer;
+      padding: 21px 12px 18px 25px;
+      width: 61px;
+      height: 70px;
+      align-self: flex-end;
+      cursor: pointer;
     }
-
     .modal__container {
-        width: 474px;
-        display: flex;
-
-        // margin-top: 18px;
-        .modal__ico {
-            width: 94px;
-            height: 120px;
-        }
-
-        .modal__text {
-            font-size: 24px;
-            text-align: center;
-            letter-spacing: 0.25px;
-            color: #154520;
-            padding-top: 40px;
-            margin-bottom: 0;
-            margin-left: 15px;
-        }
+      width: 474px;
+      display: flex;
+      // margin-top: 18px;
+      .modal__ico {
+        width: 94px;
+        height: 120px;
+      }
+      .modal__text {
+        font-size: 24px;
+        text-align: center;
+        letter-spacing: 0.25px;
+        color: #154520;
+        padding-top: 40px;
+        margin-bottom: 0;
+        margin-left: 15px;
+      }
     }
-
+  }
+  .modal-delete {
+    position: absolute;
+    top: 134px;
+    z-index: 200;
+    width: 525px;
+    height: 297px;
+    background: #f8f3d6;
+    border: 1px solid #f6f8a8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    padding-bottom: 21px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     .modal__container-delete {
-        width: 474px;
-        display: flex;
-        flex-direction: column;
-
-        .modal__text {
-            font-size: 24px;
-            text-align: center;
-            letter-spacing: 0.25px;
-            color: #154520;
-            padding-top: 15px;
-            margin-bottom: 0;
-            margin-left: 15px;
-
-            .modal__text-span {
-                font-family: Roboto;
-            }
-        }
-
-        .modal__options {
-            width: 100%;
-            display: flex;
-            padding: 0 60px;
-            justify-content: space-around;
-
-            .modal__ico-option {
-                transition: $transition;
-                padding: 30px;
-                width: 110px;
-                border-radius: 4px;
-                cursor: pointer;
-
-                path {
-                    fill: #22502b;
-                    transition: $transition;
-                }
-
-                &:hover {
-                    transform: scale(1.15);
-
-                    path {
-                        fill: #1e1e1e;
-                    }
-                }
-            }
-        }
+      width: 474px;
+      display: flex;
+      margin-top: 58px;
+      align-items: center;
+      .modal__ico-info {
+        width: 80px;
+        height: 82px;
+      }
+      .modal__text {
+        font-size: 24px;
+        text-align: center;
+        letter-spacing: 0.25px;
+        color: #936d30;
+        margin-bottom: 0;
+        margin-left: 15px;
+        line-height: 40px;
+      }
     }
-}
+    .modal__options {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      padding-left: 95px;
+      padding-right: 29px;
+      .btn-modal__cancel {
+        width: 168px;
+        height: 59px;
+        background: #e2d9a4;
+        color: #083d5e;
+        border: 1px solid #083d5e;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 35px;
+        font-size: 20px;
+        transition: $transition;
+        cursor: pointer;
+        &:hover {
+          background: #f1efe0;
+        }
+      }
+      .btn-modal__accept {
+        width: 168px;
+        height: 59px;
+        color: #e60d0d;
+        background: #e2d9a4;
+        border: 1px solid #c70f0f;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 35px;
+        font-size: 16px;
+        padding: 0 20px;
+        transition: $transition;
+        cursor: pointer;
+        &:hover {
+          background: #f1efe0;
+        }
+      }
+    }
+  }
 
 ::ng-deep .cdk-overlay-container {
     .mat-snack-bar-container {
