--- a/src/app/modules/admin/containers/users/users.component.scss
+++ b/src/app/modules/admin/containers/users/users.component.scss
@@ -199,8 +199,8 @@
     z-index: 200;
     width: 525px;
     height: 297px;
-    background-color: #cce8f4;
-    border: 1px solid #cce8f4;
+    background: #f8f3d6;
+    border: 1px solid #f6f8a8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     padding-bottom: 21px;
@@ -213,20 +213,21 @@
         width: 474px;
         display: flex;
         margin-top: 58px;
+        align-items: center;
 
         .modal__ico-info {
-            width: 88px;
-            height: 90px;
+            width: 80px;
+            height: 82px;
         }
 
         .modal__text {
             font-size: 24px;
             text-align: center;
             letter-spacing: 0.25px;
-            color: #083d5e;
-            padding-top: 15px;
+            color: #936d30;
             margin-bottom: 0;
             margin-left: 15px;
+            line-height: 40px;
         }
     }
 
@@ -234,35 +235,41 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
-        padding-left: 44px;
-        padding-right: 17px;
+        padding-left: 95px;
+        padding-right: 29px;
 
         .btn-modal__cancel {
             width: 168px;
-            height: 70px;
-            background: #ffffff;
+            height: 59px;
+            background: #e2d9a4;
+            color: #083d5e;
             border: 1px solid #083d5e;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             border-radius: 35px;
             font-size: 20px;
+            transition: $transition;
             cursor: pointer;
 
             &:hover {
-                border: 3px solid #083d5e;
+                background: #f1efe0;
             }
         }
 
         .btn-modal__accept {
             width: 168px;
-            height: 70px;
-            color: #e50d0d;
-            background: #ffffff;
-            border: 1px solid #d10e0e;
+            height: 59px;
+            color: #e60d0d;
+            background: #e2d9a4;
+            border: 1px solid #c70f0f;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             border-radius: 35px;
-            font-size: 20px;
+            font-size: 16px;
+            padding: 0 20px;
+            transition: $transition;
             cursor: pointer;
 
             &:hover {
-                border: 3px solid #d10e0e;
+                background: #f1efe0;
             }
         }
     }
