--- a/src/app/modules/admin/containers/users/users.component.scss
+++ b/src/app/modules/admin/containers/users/users.component.scss
@@ -132,8 +132,12 @@
               margin-top: 4px;
             }
           }
+          .list-user__cell--user {
+            min-width: 297px;
+          }
           .list-user__cell--usermiddle {
             padding-right: 60px;
+            min-width: 339px;
           }
           .list-user__cell {
             font-family: "Inter" !important;
