--- a/src/app/core/layouts/components/navbar/navbar.component.html
+++ b/src/app/core/layouts/components/navbar/navbar.component.html
@@ -170,7 +170,10 @@
       </a>
     </li>
     <!-- sub items de reportes -->
-    <li [ngClass]="flagReport ? 'navbar__item--h100' : 'navbar__item--h0'">
+    <li
+      class="navbar__item--h0"
+      [ngClass]="flagReport ? 'navbar__item--h100' : ''"
+    >
       <ul class="navbar__sub-list">
         <!-- Creación de Reportes -->
         <li class="navbar__sub-item navbar__sub-item--create-reports">
