--- a/src/app/core/layouts/components/navbar/navbar.component.scss
+++ b/src/app/core/layouts/components/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 @import "../../../../../styles/variables.scss";
 .navbar {
-  font-size: 16px;
+  font-size: 1rem;
   width: 15.3125em;
   position: fixed;
   z-index: 1000;
@@ -68,16 +68,6 @@
       .navbar__sub-item {
         margin: 0 0;
         cursor: pointer;
-        &:hover {
-          .navbar__sub-link {
-            color: #1967d2;
-            .navbar__sub-ico-list {
-              path {
-                fill: #1967d2;
-              }
-            }
-          }
-        }
         .navbar__sub-link {
           height: 3.3125em;
           display: flex;
@@ -88,8 +78,8 @@
           .navbar__sub-ico-list {
             width: 1.5em;
             height: 1.5em;
-            margin-left: 5px;
-            margin-right: 10px;
+            margin-left: 0.3125rem;
+            margin-right: 0.625rem;
             path {
               fill: #083d5e;
             }
@@ -114,54 +104,66 @@
             }
           }
         }
+        &:hover {
+          .navbar__sub-link {
+            color: #1967d2;
+            .navbar__sub-ico-list {
+              path {
+                fill: #1967d2;
+              }
+            }
+          }
+        }
       }
       .navbar__sub-item--create-reports {
-        border-bottom: solid 4px #92cdef;
+        border-bottom: solid 0.25rem #92cdef;
       }
     }
-    .navbar__item--h100 {
-      display: block;
-      max-height: 100%;
-    }
     .navbar__item--h0 {
+      transition: $transition;
       max-height: 0;
-      display: none;
+      overflow: hidden;
+    }
+    .navbar__item--h100 {
+      transition: $transition;
+      max-height: 6.875em;
+      overflow: hidden;
     }
   }
 }
 .modal-logout {
   position: fixed;
-  left: calc(50% - 263px + 62px);
-  top: 310px;
+  left: calc(50% - 16.4375rem + 3.875rem);
+  top: 19.375rem;
   z-index: 200;
-  width: 525px;
-  height: 247px;
+  width: 32.8125rem;
+  height: 15.4375rem;
   background: #fdff9a;
-  border: 1px solid rgba(253, 255, 154, 0.98);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  padding-bottom: 21px;
+  border: 0.0625rem solid rgba(253, 255, 154, 0.98);
+  box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+  border-radius: 0.625rem;
+  padding-bottom: 1.3125rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   .modal__container-logout {
-    width: 474px;
+    width: 29.625rem;
     display: flex;
-    margin-top: 38px;
+    margin-top: 2.375rem;
     align-items: center;
     .modal__ico-info {
-      width: 80px;
-      height: 82px;
+      width: 5rem;
+      height: 5.125rem;
     }
     .modal__text {
-      font-size: 24px;
+      font-size: 1.5rem;
       text-align: center;
-      letter-spacing: 0.25px;
+      letter-spacing: 0.0156rem;
       color: #a06b15;
       margin-bottom: 0;
-      margin-left: 15px;
-      line-height: 40px;
+      margin-left: 0.9375rem;
+      line-height: 2.5rem;
       .modal__spanFont {
         font-family: "Roboto";
       }
@@ -171,50 +173,55 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding-left: 95px;
-    padding-right: 29px;
+    padding-left: 5.9375rem;
+    padding-right: 1.8125rem;
     .btn-modal__cancel {
-      width: 168px;
-      height: 59px;
+      width: 10.5rem;
+      height: 3.6875rem;
       background: #ffffff;
       color: #083d5e;
-      border: 1px solid #083d5e;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      border-radius: 35px;
-      font-size: 20px;
+      border: 0.0625rem solid #083d5e;
+      box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+      border-radius: 2.1875rem;
+      font-size: 1.25rem;
       transition: $transition;
       cursor: pointer;
     }
     .btn-modal__accept {
-      width: 168px;
-      height: 59px;
+      width: 10.5rem;
+      height: 3.6875rem;
       color: #e60d0d;
       background: #ffffff;
-      border: 1px solid #c70f0f;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      border-radius: 35px;
-      font-size: 20px;
-      padding: 0 20px;
+      border: 0.0625rem solid #c70f0f;
+      box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+      border-radius: 2.1875rem;
+      font-size: 1.25rem;
+      padding: 0 1.25rem;
       transition: $transition;
       cursor: pointer;
     }
   }
 }
-@media (max-width: 1400px) {
+@media (max-width: 87.5rem) {
   .navbar {
-    font-size: 14px;
-    top: 145px;
+    font-size: 0.75rem;
+    top: 9.0625rem;
   }
   .modal-logout {
-    top: 222px;
+    top: 13.875rem;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 64rem) {
   .navbar {
-    font-size: 12px;
-    top: 115px;
+    font-size: 0.625rem;
+  }
+}
+@media (max-width: 48rem) {
+  .navbar {
+    font-size: 0.75rem;
+    top: 7.1875rem;
   }
   .modal-logout {
-    top: 200px;
+    top: 12.5rem;
   }
 }
