--- a/src/app/modules/admin/containers/variables/variables.component.scss
+++ b/src/app/modules/admin/containers/variables/variables.component.scss
@@ -84,6 +84,13 @@ p {
         max-width: 100%;
         border-collapse: separate;
         border-spacing: 0px 8px;
+        .list-variables__row--click {
+          transition: all 0.1s ease-in;
+          cursor: pointer;
+          &:hover {
+            background-color: #ececec;
+          }
+        }
         .list-variables__row {
           box-shadow: 0 2px 2px #00000040;
           height: 48px;
@@ -103,17 +110,10 @@ p {
             }
           }
           .list-variables__header--quantity {
-            width: 200px;
-          }
-
-          .list-variables__cell--quantity {
-            width: 200px;
-            height: 50px;
-            display: flex;
-            align-items: center;
-            padding-left: 81px;
+            padding-right: 57px;
           }
           .list-variables__cell {
+            min-width: 300px;
             font-family: "Inter" !important;
             font-size: 1em;
             line-height: 1.1875em;
@@ -121,6 +121,21 @@ p {
             &:first-of-type {
               padding-left: 1.5em;
             }
+          }
+          .list-variables__cell--quantity {
+            font-family: "Inter" !important;
+            font-size: 1em;
+            line-height: 1.1875em;
+            color: #000000;
+            height: 50px;
+            display: flex;
+            align-items: center;
+          }
+          .list-variables__cell--action {
+            padding-right: 20px;
+            min-width: 300px;
+            display: flex;
+            justify-content: flex-end;
           }
         }
       }
@@ -265,6 +280,17 @@ p {
       .variables__title {
         margin-top: 40px;
         padding-right: 57px; //centra el titulo alineado con el logo del header
+      }
+      .list-variables__table {
+        .list-variables__row {
+          .list-variables__header--quantity {
+            padding-right: 136px !important;
+          }
+
+          .list-variables__cell--quantity {
+            padding-right: 79px;
+          }
+        }
       }
     }
   }
